--- a/appstate.json
+++ b/appstate.json
@@ -1,1 +1,128 @@
-
+[
+    {
+        "key": "dbln",
+        "value": "%7B%22100000248882431%22%3A%22Ch9Tablu%22%2C%2261558134898758%22%3A%224fTDWCqZ%22%2C%2261561839095269%22%3A%22NJMMjc9J%22%7D",
+        "domain": "facebook.com",
+        "path": "/login/device-based/",
+        "hostOnly": false,
+        "creation": "2025-01-28T04:22:37.455Z",
+        "lastAccessed": "2025-01-28T04:22:37.455Z"
+    },
+    {
+        "key": "datr",
+        "value": "RtyGZ6G7i3EKWgvaPElF70bk",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-01-28T04:22:37.455Z",
+        "lastAccessed": "2025-01-28T04:22:37.455Z"
+    },
+    {
+        "key": "sb",
+        "value": "StyGZzB0WOEMs1_lypsmZp2B",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-01-28T04:22:37.455Z",
+        "lastAccessed": "2025-01-28T04:22:37.455Z"
+    },
+    {
+        "key": "ps_l",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-01-28T04:22:37.455Z",
+        "lastAccessed": "2025-01-28T04:22:37.455Z"
+    },
+    {
+        "key": "ps_n",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-01-28T04:22:37.455Z",
+        "lastAccessed": "2025-01-28T04:22:37.455Z"
+    },
+    {
+        "key": "locale",
+        "value": "en_GB",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-01-28T04:22:37.455Z",
+        "lastAccessed": "2025-01-28T04:22:37.455Z"
+    },
+    {
+        "key": "vpd",
+        "value": "v1%3B630x360x2",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-01-28T04:22:37.455Z",
+        "lastAccessed": "2025-01-28T04:22:37.455Z"
+    },
+    {
+        "key": "m_pixel_ratio",
+        "value": "2",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-01-28T04:22:37.455Z",
+        "lastAccessed": "2025-01-28T04:22:37.455Z"
+    },
+    {
+        "key": "wd",
+        "value": "360x630",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-01-28T04:22:37.455Z",
+        "lastAccessed": "2025-01-28T04:22:37.455Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61561839095269",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-01-28T04:22:37.455Z",
+        "lastAccessed": "2025-01-28T04:22:37.455Z"
+    },
+    {
+        "key": "fr",
+        "value": "17GCGGgUH6slbMsOa.AWVhYgC7WAZg7i7L1n8rSvtKNCs.BnidUm..AAA.0.0.BnmFtP.AWUukw9wNPo",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-01-28T04:22:37.455Z",
+        "lastAccessed": "2025-01-28T04:22:37.455Z"
+    },
+    {
+        "key": "xs",
+        "value": "4%3Ayf_SRTdskJBkYg%3A2%3A1738038096%3A-1%3A15478",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-01-28T04:22:37.455Z",
+        "lastAccessed": "2025-01-28T04:22:37.455Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "101021277%3BT%3A28967302",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-01-28T04:22:37.455Z",
+        "lastAccessed": "2025-01-28T04:22:37.455Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2727%3Btimestamp%3A1738038126",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-01-28T04:22:37.456Z",
+        "lastAccessed": "2025-01-28T04:22:37.456Z"
+    }
+]
